unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/DSCORGPKG__AutoUpdateSettings__c.object-meta.xml
<CustomObject>
    <label>AutoUpdateSettings</label>
    <nameField>
        <label>AutoUpdateSettings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AutoUpdateSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>