unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__AccountBatchUpdate__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__AccountBatchUpdate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>AccountBatchUpdate</label>
    <type>Checkbox</type>
</CustomField>