unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__AlwaysDisplayAccountIntermediatePage__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__AlwaysDisplayAccountIntermediatePage__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Always Display Account Intermediate Page</label>
    <type>Checkbox</type>
</CustomField>