unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__AnalyzeOpportunities__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__AnalyzeOpportunities__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Analyze Opportunities</label>
    <type>Checkbox</type>
</CustomField>