unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__AnalyzeUsage__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__AnalyzeUsage__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Analyze Usage</label>
    <type>Checkbox</type>
</CustomField>