unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__Append_And_Clean_Last_Run_Contact__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Append_And_Clean_Last_Run_Contact__c</fullName>
    <label>Append And Clean Last Run Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>