unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__Auto_Update_Frequency__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Auto_Update_Frequency__c</fullName>
    <label>Auto Update Frequency</label>
    <type>TextArea</type>
</CustomField>