unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__ContactBatchUpdate__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__ContactBatchUpdate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ContactBatchUpdate</label>
    <type>Checkbox</type>
</CustomField>