unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__CreateNewLeads__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__CreateNewLeads__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It works to create Leads on its check, when we will not allow to create conflict, synchronously with isPreventConflict.</description>
    <label>CreateNewLeads</label>
    <type>Checkbox</type>
</CustomField>