unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__customAccountField__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__customAccountField__c</fullName>
    <label>customAccountField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>