unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__customContactField__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__customContactField__c</fullName>
    <label>customContactField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>