unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__customLeadField__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__customLeadField__c</fullName>
    <label>customLeadField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>