unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__disableAccountObject__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__disableAccountObject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>disableAccountObject</label>
    <type>Checkbox</type>
</CustomField>