unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__disabled_accounts_trigger__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__disabled_accounts_trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Account Trigger</label>
    <type>Checkbox</type>
</CustomField>