unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__disabled_contacts_Trigger__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__disabled_contacts_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Contact Trigger</label>
    <type>Checkbox</type>
</CustomField>