unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__disableLeadObject__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__disableLeadObject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>disableLeadObject</label>
    <type>Checkbox</type>
</CustomField>