unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__disableLeadObjectInsert__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__disableLeadObjectInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>disableLeadObjectInsert</label>
    <type>Checkbox</type>
</CustomField>