unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__Do_not_Allow_Contacts_without_Accounts__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Do_not_Allow_Contacts_without_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not Allow Contacts without Accounts</label>
    <type>Checkbox</type>
</CustomField>