unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__Edit_Contractual_Provisions__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Edit_Contractual_Provisions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edit Contractual Provisions</label>
    <type>Checkbox</type>
</CustomField>