unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__Enable_Automatic_Weekly_Update__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Enable_Automatic_Weekly_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Automatic Weekly Update on DiscoverOrg Technology</description>
    <label>Enable Automatic Weekly Update</label>
    <type>Checkbox</type>
</CustomField>