unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__ExcludeEUContacts__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__ExcludeEUContacts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude EU Contacts</label>
    <type>Checkbox</type>
</CustomField>