unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__isAccountTriggerRecImport__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__isAccountTriggerRecImport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAccountTriggerRecImport</label>
    <type>Checkbox</type>
</CustomField>