unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__isAppendnCleanSchedule__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__isAppendnCleanSchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAppendnCleanSchedule</label>
    <type>Checkbox</type>
</CustomField>