unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__isCheckAddUpdateAllCompsAndContacts__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__isCheckAddUpdateAllCompsAndContacts__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isCheckAddUpdateAllCompsAndContacts</label>
    <type>Checkbox</type>
</CustomField>