unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__isCheckAddUpdateCompanyandContacts__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__isCheckAddUpdateCompanyandContacts__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isCheckAddUpdateCompanyandContacts</label>
    <type>Checkbox</type>
</CustomField>