unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__isContactTriggerRecImport__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__isContactTriggerRecImport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isContactTriggerRecImport</label>
    <type>Checkbox</type>
</CustomField>