unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__isCustomFieldAccount__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__isCustomFieldAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCustomFieldAccount</label>
    <type>Checkbox</type>
</CustomField>