unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__isCustomFieldContact__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__isCustomFieldContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCustomFieldContact</label>
    <type>Checkbox</type>
</CustomField>