unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__isDeleteOppAlerts__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__isDeleteOppAlerts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDeleteOppAlerts</label>
    <type>Checkbox</type>
</CustomField>