unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__isDuplicateCheckContacts__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__isDuplicateCheckContacts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDuplicateCheckContacts</label>
    <type>Checkbox</type>
</CustomField>