unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__isExportCSVCheck__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__isExportCSVCheck__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isExportCSVCheck</label>
    <type>Checkbox</type>
</CustomField>