unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__isLeadTriggerRecImport__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__isLeadTriggerRecImport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isLeadTriggerRecImport</label>
    <type>Checkbox</type>
</CustomField>