unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__isOwnerChange__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__isOwnerChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isOwnerChange</label>
    <type>Checkbox</type>
</CustomField>