unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__isPersonnelTrigger__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__isPersonnelTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPersonnelTrigger</label>
    <type>Checkbox</type>
</CustomField>