unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__isPreventConflict__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__isPreventConflict__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isPreventConflict</label>
    <type>Checkbox</type>
</CustomField>