unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__isPrivacySettingsUpdated__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__isPrivacySettingsUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field is used to update privacy setting very first time for users at the time of app upgradation</description>
    <label>Privacy Settings Updated?</label>
    <type>Checkbox</type>
</CustomField>