unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__isProjectTrigger__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__isProjectTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isProjectTrigger</label>
    <type>Checkbox</type>
</CustomField>