unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__LeadBatchUpdate__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__LeadBatchUpdate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>LeadBatchUpdate</label>
    <type>Checkbox</type>
</CustomField>