unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__Legacy_Triggers_Category__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Legacy_Triggers_Category__c</fullName>
    <label>Legacy Triggers Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>