unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__OppAlert_ContributoryTopics__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__OppAlert_ContributoryTopics__c</fullName>
    <label>OppAlert ContributoryTopics</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>