unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__OppAlert_Import_Frequency__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__OppAlert_Import_Frequency__c</fullName>
    <label>OppAlert Import Frequency</label>
    <type>TextArea</type>
</CustomField>