unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__OppAlert_OpportunityType__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__OppAlert_OpportunityType__c</fullName>
    <label>OppAlert OpportunityType</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>