unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__OppAlertDeleteDate__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__OppAlertDeleteDate__c</fullName>
    <label>OppAlertDeleteDate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>2 Months</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>1 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>