unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__Remove_Inactive_Technologies__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Remove_Inactive_Technologies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Inactive Technologies</label>
    <type>Checkbox</type>
</CustomField>