unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__scheduleDeleteConflict__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__scheduleDeleteConflict__c</fullName>
    <label>scheduleDeleteConflict</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Week</fullName>
            </value>
            <value>
                <fullName>1 Month</fullName>
                <default>true</default>
                <label>1 Month</label>
            </value>
            <value>
                <fullName>Do not automatically delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>