unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__Search_By_Website__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Search_By_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Search By Website</label>
    <type>Checkbox</type>
</CustomField>