unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__Search_Type__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Search_Type__c</fullName>
    <label>Search Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exact</fullName>
                <default>true</default>
                <label>Exact</label>
            </value>
            <value>
                <fullName>Like *</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>