unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__Selected_Technology__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Selected_Technology__c</fullName>
    <label>Selected Technology</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>