unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__Tiggers_Department__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Tiggers_Department__c</fullName>
    <label>Tiggers Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>