unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__Triggers_Topics_Category__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Triggers_Topics_Category__c</fullName>
    <label>Triggers Topics Category</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>