unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__UpdateAccountFieldsifNULL__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__UpdateAccountFieldsifNULL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Account Fields only if NULL</label>
    <type>Checkbox</type>
</CustomField>