unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__UpdateContactFieldsIfNULL__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__UpdateContactFieldsIfNULL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Contact Fields only if NULL</label>
    <type>Checkbox</type>
</CustomField>