unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__UpdateLeadFieldsifNULL__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__UpdateLeadFieldsifNULL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Lead Fields only if NULL</label>
    <type>Checkbox</type>
</CustomField>