unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__UserPreferenceSharing__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__UserPreferenceSharing__c</fullName>
    <defaultValue>true</defaultValue>
    <label>User Preference Sharing</label>
    <type>Checkbox</type>
</CustomField>