unpackaged/main/default/objects/DSCORGPKG__AutoUpdateSettings__c/fields/DSCORGPKG__VerifyNonMatchingData__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__VerifyNonMatchingData__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Verify Non Matching Data</label>
    <type>Checkbox</type>
</CustomField>